add user pause/resume related endpoints
