# wazo_agentd/swagger/api.yml
@@ -298,6 +298,28 @@ paths:
           description: Agent is not logged
           schema:
             $ref: '#/definitions/Error'
+  /users/me/agents/pause:
+    post:
+      summary: Logoff the agent of the user holding the authentication token
+      description: '**Required ACL:** `agentd.users.me.agents.pause.create`'
+      operationId: pause_user_agent
+      tags:
+      - agent
+      - user
+      parameters:
+      - $ref: '#/parameters/tenantuuid'
+      responses:
+        '204':
+          description: The operation was performed succesfully
+        '400':
+          description: The token has no user; or wrong tenant; or the user has no agent
+          schema:
+            $ref: '#/definitions/Error'
+        '409':
+          description: Agent is already logged or another agent is already logged
+            on this line
+          schema:
+            $ref: '#/definitions/Error'
   /agents/by-number/{agent_number}/unpause:
     post:
       summary: Unpause an agent.
@@ -321,6 +343,28 @@ paths:
             $ref: '#/definitions/Error'
         '409':
           description: Agent is not logged
+          schema:
+            $ref: '#/definitions/Error'
+  /users/me/agents/resume:
+    post:
+      summary: Logoff the agent of the user holding the authentication token
+      description: '**Required ACL:** `agentd.users.me.agents.resume.create`'
+      operationId: resume_user_agent
+      tags:
+      - agent
+      - user
+      parameters:
+      - $ref: '#/parameters/tenantuuid'
+      responses:
+        '204':
+          description: The operation was performed succesfully
+        '400':
+          description: The token has no user; or wrong tenant; or the user has no agent
+          schema:
+            $ref: '#/definitions/Error'
+        '409':
+          description: Agent is already logged or another agent is already logged
+            on this line
           schema:
             $ref: '#/definitions/Error'
   /agents/by-id/{agent_id}/add:
